--- a/web/styles.css
+++ b/web/styles.css
@@ -47,11 +47,12 @@ img {
   --orange: rgb(236, 155, 3);
 }
 
-body {
+body, header, section {
   align-items: center;
   background-color: var(--blanco);
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 
 .header {
@@ -68,7 +69,7 @@ body {
 }
 
 .header-img {
-  background: center / contain no-repeat url(./images/DiegoRetrato.jpg);
+  /* background: center / contain no-repeat url(./images/DiegoRetrato.jpg); */
   border-radius: 50%;
   border: 1px solid var(--gris-oscuro);
   box-shadow: 8px 16px 32px 0px var(--shadow);
@@ -77,13 +78,23 @@ body {
   width: 300px;
 }
 
+nav {
+  width: 100%;
+}
+
 .navigation {
   color: var(--blanco);
   cursor: pointer;
   display: flex;
   justify-content: space-around;
-  margin: 24px 0;
+  margin: 24px auto;
   width: 50%;
+}
+
+.nav-item a {
+  text-decoration: none;
+  color: white;
+  
 }
 
 .nav-item {
