Contrastes de color

--- a/web/styles.css
+++ b/web/styles.css
@@ -44,7 +44,7 @@ img {
   --main-font: "Oswald", sans-serif;
   --secondary-font: "Open Sans", sans-serif;
   --shadow: rgba(0, 0, 0, 0.75);
-  --orange: rgb(236, 155, 3);
+  --orange: rgb(162 105 0);
 }
 
 body,
