--- a/web/styles.css
+++ b/web/styles.css
@@ -215,7 +215,7 @@ nav {
   outline: 3px solid var(--orange);
 }
 
-.project {
+.project-img {
   border-radius: 5px;
   border: 2px solid #000;
   display: inline-block;
@@ -291,6 +291,7 @@ input:focus {
   padding: 8px;
 }
 
+.modal-button,
 .send-button {
   align-items: center;
   background-color: orange;
@@ -305,6 +306,7 @@ input:focus {
   width: 150px;
   margin-left: auto;
   font-size: 16px;
+  cursor: pointer;
 }
 
 .send-button:focus {
@@ -345,20 +347,20 @@ input:focus {
   border: 2px solid #000;
   display: flex;
   flex-direction: column;
-  height: 700px;
+  /* height: 700px; */
   justify-content: center;
   position: fixed;
   top: 15%;
   width: 700px;
+  padding-bottom: 200px;
 }
 
 .modal-project-image {
   background: center / cover no-repeat url(./images/AI.jpg);
   border-radius: 5px;
   border: 2px solid #000;
-  height: 400px;
   margin: 16px;
-  width: 550px;
+  height: 250px;
 }
 
 .form-label {
